2010-04-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs: Don't
	  include the project folder in the relative name.

2010-04-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs: Order
	  by rank.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs: Show
	  file path in the description. if it's truncated from the
	  match.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components.Commands/CommandManager.cs: Try to
	  fix a intptr exception alan had.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs:
	  Corrected use full name for types.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs: Worked
	  on navigate to dialog.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.NavigateToDialog/NavigateToDialog.cs:
	  changed file search behavior to the old one.

2010-04-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide/DesktopService.cs: Track last minute change.

2010-04-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Desktop/PlatformService.cs: External console
	  processes are now wrapped by a IProcessAsyncOperation
	  interface, instead of a Process instance. In this way it is
	  possible to create external consoles which are not directly
	  bound to a process.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs: Set document tag.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.addin.xml: changed navigate to mac shortcut.

2010-04-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/CompletionListWindow.cs:
	  Fixed 'Bug 598828 – Completion window should not move
	  relative to caret as it shrinks'.

2010-04-26  Lluis Sanchez Gual  <lluis@novell.com>
